# py-poetry-devcontainer

./: DevStartup.sh  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateContainer.sh
